--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
         "react-router-dom": "^4.2.2"
     },
     "devDependencies": {
+        "@types/history": "^4.6.2",
+        "@types/jest": "^22.0.1",
+        "@types/node": "^9.3.0",
+        "@types/react": "^16.0.34",
+        "@types/react-dom": "^16.0.3",
+        "@types/react-router-dom": "^4.2.3",
+        "awesome-typescript-loader": "^3.4.1",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
@@ -35,7 +42,9 @@
         "font-awesome-webpack": "0.0.5-beta.2",
         "less": "^2.7.3",
         "less-loader": "^4.0.5",
+        "source-map-loader": "^0.2.3",
         "style-loader": "^0.19.1",
+        "typescript": "^2.6.2",
         "url-loader": "^0.6.2",
         "webpack": "^3.10.0"
     }
